flapivor/tests/tests-m3/hopix/typechecker/good/recfuns3.hopix
fun f (x : int, s : string) : int =
  f (x + 1, s) + g (x)
and g (x : int) : int =
  g (f (0, "yo"))