flapivor/tests/tests-m3/hopix/typechecker/bad/recfuns2.hopix
fun f (x : int) : int =
  f (x + 1) + h (x)
and g (x : int) : int =
  g (f (0))